@@ -38,10 +38,11 @@ coverage_cutoff = 65
 #          14-May-2020 jdw simplifying test runner and suppress coverage step
 #          28-Oct-2020 jdw py38->py39
 #          23-Dec-2022 aae updates for tox 4
+#          16-Oct-2024 dwp py39->py310
 ##
 [tox]
 # The complete list of supported test environments to setup and invoke
-envlist = format_pep8-{py39}, lint_pylint-{py39}, format_black-{py39}, py{39}
+envlist = format_pep8-{py310}, lint_pylint-{py310}, format_black-{py310}, py{310}
 #
 minversion = 3.4.0
 skip_missing_interpreters = true
@@ -52,31 +53,9 @@ passenv = CONFIG_SUPPORT_TOKEN_ENV
 allowlist_externals = echo
 commands =
     echo "Starting default tests in testenv"
-basepython = py39: python3.9
-             py27: python2.7
+basepython = py310: python3.10
 
-[testenv:py27]
-description = 'Run unit tests (unittest runner) using {envpython}'
-platform=
-       macos: darwin
-       linux: linux
-skip_install = false
-recreate = true
-alwayscopy=true
-package = editable-legacy
-deps =
-       -r requirements.txt
-commands =
-    echo "Starting {envname}"
-    {envpython} -V
-    {envpython} -m unittest discover -v --start-directory {[local_settings]fixture_path_1} --pattern "{[local_settings]fixture_pattern}"
-    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_1} --pattern "{[local_settings]test_pattern}"
-    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_2} --pattern "{[local_settings]test_pattern}"
-    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_3} --pattern "{[local_settings]test_pattern}"
-    {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_4} --pattern "{[local_settings]test_pattern}"
-    echo "Completed {envname}"
-
-[testenv:py39]
+[testenv:py310]
 description = 'Run unit tests (unittest runner) using {envpython}'
 platform=
        macos: darwin
@@ -98,7 +77,7 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:format_pep8-py39]
+[testenv:format_pep8-py310]
 description = 'Run selected PEP8 compliance checks (flake8)'
 platform=
        macos: darwin
@@ -114,7 +93,7 @@ commands =
     flake8 --max-line-length=185 --ignore=D,I,E203,W503  {[local_settings]source_paths}
 
 #
-[testenv:lint_pylint-py39]
+[testenv:lint_pylint-py310]
 description = 'Run linting compliance checks (pylint)'
 platform=
        macos: darwin
@@ -128,7 +107,7 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:format_black-py39]
+[testenv:format_black-py310]
 description = 'Run format compliance checks (black)'
 platform=
        macos: darwin
